Add and remove paymentOptions
